# semantic-cache-mcp

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  benchmark_compression.py  glama.json  lefthook.yml  pyproject.toml
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml  release.yml
benchmarks/: __init__.py  _bench_lib.py  benchmark_cdc.py  benchmark_performance.py  benchmark_token_savings.py
docs/: advanced-usage.md  architecture.md  contributing.md  env_variables.md  hooks.md  performance.md  security.md  troubleshooting.md
hooks/: install.sh  pre-tool-use.sh
src/semantic_cache_mcp/: __init__.py  cache.py  config.py  logger.py  server.py  types.py
src/semantic_cache_mcp/cache/: __init__.py  _helpers.py  metrics.py  read.py  search.py  store.py  write.py
src/semantic_cache_mcp/core/: __init__.py  chunking.py  chunking_simd.py  compression.py  embeddings.py  hashing.py  lsh.py  quantization.py  similarity.py  summarize.py  text.py  tokenizer.py
src/semantic_cache_mcp/core/chunking/: __init__.py  _gear.py  _simd.py
src/semantic_cache_mcp/core/embeddings/: __init__.py  _constants.py  _cuda.py  _model.py  _openai.py  _registry.py
src/semantic_cache_mcp/core/hashing/: __init__.py  _blake.py
src/semantic_cache_mcp/core/similarity/: __init__.py  _cosine.py  _lsh.py  _quantization.py
src/semantic_cache_mcp/core/text/: __init__.py  _diff.py  _summarize.py
src/semantic_cache_mcp/core/tokenizer/: __init__.py  _bpe.py
src/semantic_cache_mcp/server/: __init__.py  _mcp.py  _param_hints.py  _read_session.py  _tool_models.py  _tool_worker.py  response.py  tools.py
src/semantic_cache_mcp/server/tools/: __init__.py
src/semantic_cache_mcp/storage/: __init__.py  sqlite.py  vector.py
src/semantic_cache_mcp/storage/docstore/: __init__.py  _docstore.py  _grep.py  _search.py  _tinylfu.py
src/semantic_cache_mcp/storage/vector/: __init__.py  _grep.py  _search.py  _tinylfu.py
src/semantic_cache_mcp/utils/: __init__.py  _async_io.py  _detached_executor.py  _retry.py
tests/: __init__.py  conftest.py  constants.py  test_async_io.py  test_benchmark_cdc.py  test_benchmark_token_savings.py  test_cache.py  test_cache_coverage.py  test_chunk_reconcile.py  test_chunking_simd.py  test_core.py  test_core_coverage.py  test_coverage_gaps.py  test_crash_hardening.py  test_cross_platform.py  test_detached_executor.py  test_docstore.py  test_e2e.py  test_embeddings.py  test_fastmcp_contracts.py  test_fortification.py  test_hardening_coverage.py  test_lsh.py  test_metrics.py  test_new_tools.py  test_param_alias_hints.py  test_perf_optimizations.py  test_quantization.py  test_read_freshness.py  test_read_image.py  test_read_session_tracking.py  test_remote_forward.py  test_response_contract.py  test_search_relevance.py  test_server.py  test_server_tools.py  test_shutdown.py  test_stdio_transport_timeout.py  test_storage.py  test_storage_mode_and_grep_prefilter.py  (+10 more)
