[project]
name = "semantic-cache-mcp"
version = "0.3.5"
description = "Lightweight MCP server for semantic file caching with 80%+ token reduction"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "blake3>=1.0.8",
    "fastembed>=0.5.1",
    "fastmcp>=3.0.0b1",
    "simplevecdb>=2.3.0",
]

[project.optional-dependencies]
gpu = [
    "fastembed-gpu>=0.5.1",
]
dev = [
    "bandit>=1.7.0",
    "mypy>=1.8.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.0",
]

[project.scripts]
semantic-cache-mcp = "semantic_cache_mcp.server:main"

[tool.uv]
# sqlcipher3-binary only has Linux wheels; simplevecdb uses it only for
# optional encryption (which we don't use). Override to avoid install
# failures on macOS/Windows.
override-dependencies = [
    "sqlcipher3-binary>=0.5.0; sys_platform == 'linux'",
]

[tool.uv.sources]
simplevecdb = { path = "../simplevecdb", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/semantic_cache_mcp"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "E501",   # line too long
    "N806",   # variable in function should be lowercase
    "SIM108", # ternary operator
    "SIM102", # nested if
    "F841",   # local variable assigned but never used
    "B904",   # raise from within except
    "B905",   # zip without strict
    "UP028",  # yield from
    "E402",   # module level import not at top of file
    "C416",   # unnecessary list comprehension
]

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_ignores = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.bandit]
exclude_dirs = ["tests", ".venv", "venv"]
skips = [
    "B101",  # assert warnings (used in tests)
    "B310",  # urllib.urlretrieve - we use known hardcoded URL
    "B311",  # random - used for deterministic Gear hash table, not security
    "B608",  # SQL injection - false positive, we use parameterized placeholders
    "B615",  # HF Hub download without revision pin - we verify SHA256 post-download
    "B110",  # try/except/pass - intentional for optional config files (pooling)
]
